[package]
name = "q_and_a"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
handle_errors = { path = "handle_errors" }
log = "0.4"
log4rs = "1.0"
uuid = { version = "1.19.0", features = ["v4"]}