[package]
name = "q_and_a"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
handle_errors = { path = "handle_errors" }
uuid = { version = "1.19.0", features = ["v4"]}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
rand = "0.8"
rust-argon2 = "1.0"

[build-dependencies]
syn = "1"